force-app/main/default/objects/SR_Case_Determination__c/SR_Case_Determination__c.object-meta.xml
<CustomObject>
    <description>This Object maintains the Case definition according to the Call Type and Feedback Channel input from the user.</description>
    <label>SR Case Determination</label>
    <nameField>
        <displayFormat>CD-{000000}</displayFormat>
        <label>Determination ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>