force-app/main/default/objects/SR_Case_Determination__c/fields/Backup_Resolver__c.field-meta.xml
<CustomField>
    <fullName>Backup_Resolver__c</fullName>
    <label>Backup Resolver</label>
    <length>80</length>
    <type>Text</type>
</CustomField>