force-app/main/default/objects/SR_Case_Determination__c/fields/Case_Nature__c.field-meta.xml
<CustomField>
    <fullName>Case_Nature__c</fullName>
    <label>Case Nature</label>
    <length>80</length>
    <type>Text</type>
</CustomField>