force-app/main/default/objects/SR_Case_Determination__c/fields/Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner__c</fullName>
    <label>Case Owner</label>
    <length>80</length>
    <type>Text</type>
</CustomField>