force-app/main/default/objects/SR_Case_Determination__c/fields/Case_Resolver__c.field-meta.xml
<CustomField>
    <fullName>Case_Resolver__c</fullName>
    <label>Case Resolver</label>
    <length>80</length>
    <type>Text</type>
</CustomField>