force-app/main/default/objects/SR_Case_Determination__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>