force-app/main/default/objects/SR_Case_Determination__c/fields/Holiday_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Holiday Indicator(Y/N)</description>
    <label>Holiday Indicator</label>
    <type>Checkbox</type>
</CustomField>