force-app/main/default/objects/SR_Case_Determination__c/fields/LOB__c.field-meta.xml
<CustomField>
    <fullName>LOB__c</fullName>
    <description>Line of Business</description>
    <label>LOB</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>