force-app/main/default/objects/SR_Case_Determination__c/fields/Target_Time__c.field-meta.xml
<CustomField>
    <fullName>Target_Time__c</fullName>
    <label>Target Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>