force-app/main/default/objects/SR_Case_Determination__c/fields/Urgent_Case_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Urgent_Case_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Urgent Case Indicator(Y/N)</description>
    <label>Urgent Case Indicator</label>
    <type>Checkbox</type>
</CustomField>